--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   },
   "main": "lib/index.js",
   "scripts": {
-    "all": "npm run build && npm run pack",
+    "all": "npm run format && npm run build && npm run pack",
     "build": "tsc",
     "pack": "ncc build",
-    "lint": "eslint src/**/*.ts"
+    "lint": "eslint src/**/*.ts",
+    "format": "prettier --write **/*.ts"
   },
   "dependencies": {
     "@actions/core": "^1.2.2",
@@ -33,6 +34,7 @@
     "@typescript-eslint/parser": "^2.20.0",
     "@zeit/ncc": "^0.21.1",
     "eslint": "^6.8.0",
+    "prettier": "^1.19.1",
     "typescript": "^3.8.2"
   }
 }
